Add Microsoft email notifications

--- a/docker/.env.example
+++ b/docker/.env.example
@@ -31,6 +31,14 @@ WAIT_FOR_CHALLENGE_VIEW_TO_RENDER_MS=1500
 # Default: true
 CONSTRAINT_RESPONSE_SCHEMA=true
 
+# Microsoft email OAuth settings (optional)
+MS_TENANT_ID=
+MS_CLIENT_ID=
+MS_CLIENT_SECRET=
+MS_SENDER=
+# comma separated list of recipients
+MS_RECIPIENTS=
+
 # For the challenge classification task
 # Used as last resort when HSW decoding fails.
 # Default: gemini-2.5-flash
