--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,8 @@ dependencies = [
     "pydantic-settings>=2.8.1",
     "celery[redis]>=5.4.0",
     "hcaptcha-challenger[camoufox]>=0.18.10",
+    "httpx>=0.28.1",
+    "msal>=1.30.0",
 ]
 requires-python = ">=3.12,<=3.13"
 authors = [
