Simplify Microsoft mailer integration

--- a/docker/.env.example
+++ b/docker/.env.example
@@ -59,3 +59,11 @@ SPATIAL_POINT_THINKING_BUDGET=1387
 # How many tokens should the thinking budget be?
 # Default: 1652
 SPATIAL_PATH_THINKING_BUDGET=1652
+
+# Microsoft Graph mail notification settings
+# Required when enabling email digests for free games
+MS_CLIENT_ID=
+MS_CLIENT_SECRET=
+MS_TENANT_ID=
+MS_SENDER_ADDRESS=
+MS_RECIPIENT_ADDRESS=
