--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,8 @@ dependencies = [
     "apscheduler>=3.11.0",
     "pydantic-settings>=2.8.1",
     "celery[redis]>=5.4.0",
+    "httpx>=0.28.1",
+    "msal>=1.31.1",
     "hcaptcha-challenger[camoufox]>=0.18.10",
 ]
 requires-python = ">=3.12,<=3.13"
